complete doc for normalizer API
