# app/controllers/api/normalize_controller.go
@@ -12,6 +12,37 @@ type NormalizeController struct {
 	*revel.Controller
 }
 
+// swagger:operation GET /normalize/location  Normalizer normalize-location
+//
+// Normalize a given location name to return a standard location name
+//
+// This API allows to normalize a given location name
+//
+// ---
+// produces:
+// - application/json
+//
+// parameters:
+//
+// - name: searchText
+//   in: query
+//   description: text to be normalized
+//   required: true
+//   type: string
+//
+// responses:
+//   '200':
+//     description: normalized text
+//     schema:
+//       type: object
+//   '400':
+//     description: input parameter validation error
+//     schema:
+////       "$ref": "#/definitions/ErrorResponse"
+//   '500':
+//     description: server error
+//     schema:
+//       "$ref": "#/definitions/ErrorResponse"
 func (c NormalizeController) NormalizeLocation() revel.Result {
 	searchText := c.Params.Values.Get("searchText")
 	if searchText == "" {
@@ -27,6 +58,37 @@ func (c NormalizeController) NormalizeLocation() revel.Result {
 	return c.RenderJSON(result)
 }
 
+// swagger:operation GET /normalize/name  Normalizer normalize-name
+//
+// Normalize a given entity title
+//
+// This API allows to normalize a given entity title
+//
+// ---
+// produces:
+// - application/json
+//
+// parameters:
+//
+// - name: searchText
+//   in: query
+//   description: text to be normalized
+//   required: true
+//   type: string
+//
+// responses:
+//   '200':
+//     description: normalized text
+//     schema:
+//       type: object
+//   '400':
+//     description: input parameter validation error
+//     schema:
+////       "$ref": "#/definitions/ErrorResponse"
+//   '500':
+//     description: server error
+//     schema:
+//       "$ref": "#/definitions/ErrorResponse"
 func (c NormalizeController) NormalizeName() revel.Result {
 	searchText := c.Params.Values.Get("searchText")
 	if searchText == "" {
@@ -42,6 +104,37 @@ func (c NormalizeController) NormalizeName() revel.Result {
 	return c.RenderJSON(result)
 }
 
+// swagger:operation GET /normalize  Normalizer normalize
+//
+// Normalize a given entity title
+//
+// This API allows to normalize a given entity title
+//
+// ---
+// produces:
+// - application/json
+//
+// parameters:
+//
+// - name: searchText
+//   in: query
+//   description: text to be normalized
+//   required: true
+//   type: string
+//
+// responses:
+//   '200':
+//     description: normalized text
+//     schema:
+//       type: object
+//   '400':
+//     description: input parameter validation error
+//     schema:
+////       "$ref": "#/definitions/ErrorResponse"
+//   '500':
+//     description: server error
+//     schema:
+//       "$ref": "#/definitions/ErrorResponse"
 func (c NormalizeController) Normalize() revel.Result {
 	searchText := c.Params.Values.Get("searchText")
 	if searchText == "" {
